Ernie homepage updates

--- a/antenna/antenna/templates/index.html
+++ b/antenna/antenna/templates/index.html
@@ -9,11 +9,15 @@
   <body>
     <div class="page">
       <h1>Ernie</h1>
-      <p>Kung hindi mo alam, itanong kay Ernie.</p>
-      <p>I-send lang ang inyong katanungan sa numerong:</p>
+      <h2>No net, no problem!</h2>
+      <p>Ernie is an sms-based personal assistant that gives you various information from the web without having a net. Both input and output are via SMS. It uses natural language as input instead of the traditional "keywords" that you have to memorize so it’s less confusing. The output ranges from Point A to Point B directions, traffic situation, random questions, complex calculations and weather conditions & forecast.</p>
+      <p>...BECAUSE KNOWLEDGE IS POWER!</p>
+      <p>Just send your "query" to:</p>
       <div class="number">
-        29290 ERNIE<br>
-        37643
+        29290XXXX (contact us for the access code)
+      </div>
+      <div>
+        <small>Examples & features <a href="http://ernie.katpadi.ph/">here</a>.</small>
       </div>
     </div>
   </body>
