--- a/antenna/antenna/templates/index.html
+++ b/antenna/antenna/templates/index.html
@@ -16,8 +16,8 @@
       <div class="number">
         29290XXXX (contact us for the access code)
       </div>
-      <div>
-        <small>Examples & features <a href="http://ernie.katpadi.ph/">here</a>.</small>
+      <div class="features">
+        <h3>Features</h3>
       </div>
     </div>
   </body>
