--- a/antenna/antenna/templates/index.html
+++ b/antenna/antenna/templates/index.html
@@ -16,8 +16,12 @@
       <div class="number">
         29290XXXX (contact us for the access code)
       </div>
-      <div class="features">
-        <h3>Features</h3>
+      <div class="samples">
+        <h3>Samples</h3>
+        <p>User sends: "How's the weather in Baguio?" </p>
+        <p>Ernie replies: It's mostly cloudy in Baguio.</p>
+        <p> User sends: "How do I get to Kapitolyo from Ortigas Center?" </p>
+        <p>Ernie replies: Head northeast on E Capitol Dr toward Santa Maria St, Take the 3rd right onto W Capitol Dr, At the roundabout, take the 3rd exit onto Shaw Blvd, Turn right onto San Miguel Ave, Turn left" Plus, many more. </p>
       </div>
     </div>
   </body>
