--- a/antenna/antenna/templates/index.html
+++ b/antenna/antenna/templates/index.html
@@ -23,6 +23,16 @@
         <p> User sends: "How do I get to Kapitolyo from Ortigas Center?" </p>
         <p>Ernie replies: Head northeast on E Capitol Dr toward Santa Maria St, Take the 3rd right onto W Capitol Dr, At the roundabout, take the 3rd exit onto Shaw Blvd, Turn right onto San Miguel Ave, Turn left" Plus, many more. </p>
       </div>
+      <div class="features">
+      <h3>Features</h3>
+        <ul>
+          <li>Weather</li>
+          <li>Directions from point A to point B ie. How do I go to Katipunan from Marikina?</li>
+          <li>Random calculation or question ie. President of the Philippines</li>
+          <li>Traffic situation ie. how's the traffic in Balintawak?</li>
+          <li>...plus we're planning to add more like movie scheds etc.</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
