--- a/antenna/antenna/templates/index.html
+++ b/antenna/antenna/templates/index.html
@@ -11,7 +11,11 @@
     <div id="pagepiling">
       <div class="ernie section">
         <h1>Ernie</h1>
-        <h2>We all know Siri<br>Meet <strong>Ernie</strong></h2>
+        <h2>
+          We all know Siri<br>
+          Meet <strong>Ernie</strong><br>
+        </h2>
+        <h3>Your friendly SMS sidekick</h3>
         <p>Scroll down<br>to learn more<br>&#x25BC;</p>
       </div>
       <div class="desc section">
