Change direction example

--- a/antenna/antenna/templates/index.html
+++ b/antenna/antenna/templates/index.html
@@ -27,7 +27,7 @@
         <p>
           How's the weather in Baguio? Ask Ernie.<br>
           Is it traffic in EDSA? Ask Ernie.<br>
-          How do you get from Greenbelt to Saguijo? Ask Ernie!
+          How do you get from Makati to Marikina? Ask Ernie!
         </p>
         <p>
           Just send your question to 29290XXXX.<br>
