--- a/antenna/antenna/static/css/main.css
+++ b/antenna/antenna/static/css/main.css
@@ -13,12 +13,9 @@ body {
 
 h1 {
   background: url(../images/ernie.png) no-repeat center center;
-  width: 300px;
-  height: 300px;
-  background-size: 150px;
-  border-radius: 50%;
-  border: 2px solid;
-  margin: 0 auto;
+  width: 150px;
+  height: 150px;
+  margin: 50px auto;
   text-indent: -1000em;
 }
 
