--- a/antenna/antenna/templates/index.html
+++ b/antenna/antenna/templates/index.html
@@ -43,6 +43,12 @@
         </form>
         <div class="reply"></div>
       </div>
+      <div class="video section">
+        <iframe
+        src="//player.vimeo.com/video/110969874?byline=0&amp;portrait=0&amp;color=ffffff"
+        width="500" height="281" frameborder="0" webkitallowfullscreen
+        mozallowfullscreen allowfullscreen></iframe>
+      </div>
       <div class="about section">
         <h2>Made by Kat and Steve</h2>
         <p>
@@ -67,6 +73,7 @@
               "We all know Siri",
               "Who's Ernie?",
               "Try Ernie",
+              "Video",
               "Made by Kat and Steve"
             ]
           }
