--- a/antenna/antenna/templates/index.html
+++ b/antenna/antenna/templates/index.html
@@ -28,6 +28,7 @@
           How's the weather in Baguio? Ask Ernie.<br>
           Is it traffic in EDSA? Ask Ernie.<br>
           How do you get from Makati to Marikina? Ask Ernie!
+          How high is Taipei 101? You know the drill.
         </p>
         <p>
           Just send your question to 29290XXXX.<br>
