--- a/antenna/antenna/templates/index.html
+++ b/antenna/antenna/templates/index.html
@@ -27,7 +27,7 @@
         <p>
           How's the weather in Baguio? Ask Ernie.<br>
           Is it traffic in EDSA? Ask Ernie.<br>
-          How do you get from Makati to Marikina? Ask Ernie!
+          How do you get from Makati to Marikina? Ask Ernie!<br>
           How high is Taipei 101? You know the drill.
         </p>
         <p>
